--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ strum = "0.24.1"
 strum_macros = "0.24"
 bonsaidb = { version = "*", features = ["local-full"] }
 polodb_core = "3.5.2"
+uuid = {version = "1.3.0", features = ["v4", "fast-rng"]}
 
 [features]
 # by default Tauri runs in production mode
