--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,13 +21,15 @@ tauri = {version = "1.2", features = ["api-all"] }
 strum = "0.24.1"
 strum_macros = "0.24"
 bonsaidb = { version = "*", features = ["local-full"] }
-polodb_core = "3.5.2"
 uuid = {version = "1.3.0", features = ["v4", "fast-rng"]}
+surrealdb = "1.0.0-beta.9"
+tokio = { version = "1.21.2", features = ["full"] }
+async-trait = "0.1.68"
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
