--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ strum = "0.24.1"
 strum_macros = "0.24"
 bonsaidb = { version = "*", features = ["local-full"] }
 uuid = {version = "1.3.0", features = ["v4", "fast-rng"]}
-surrealdb = "1.0.0-beta.9"
+surrealdb = {version ="1.0.0-beta.9", features = ["kv-rocksdb"]}
 tokio = { version = "1.21.2", features = ["full"] }
 async-trait = "0.1.68"
 
