--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ uuid = {version = "1.3.0", features = ["v4", "fast-rng"]}
 surrealdb = {version ="1.0.0-beta.9", features = ["kv-rocksdb"]}
 tokio = { version = "1.21.2", features = ["full"] }
 async-trait = "0.1.68"
+futures = "0.3.28"
 
 [features]
 # by default Tauri runs in production mode
